# dataset_generator

./: .gitignore  README.md  experiment_configuration.exc  gazebo_actor-updaterate_patch.sh  handover_virtual_room.sdf  nrp_installer.sh  room.sdf  setup.sh  user-settings.uis
GazeboRosPkgs/src/gazebo_modelstates_timestamp_patch/: CMakeLists.txt  package.xml
GazeboRosPkgs/src/gazebo_modelstates_timestamp_patch/msg/: model_states_with_timestamp.msg
GazeboRosPkgs/src/gazebo_modelstates_timestamp_patch/src/: gazebo_model_state_timestamp_patch.cpp  gazebo_model_state_timestamp_patch.h
Models/adjustable_spanner/: bckp_model.sdf  model.config  model.sdf
Models/eric/: eric.dae  eric_armL.dae  eric_calfL.dae  eric_footL.dae  eric_footR.dae  eric_forearmL.dae  eric_handR.dae  eric_head.dae  eric_legL.dae  eric_legR.dae  eric_torso.dae  model.config  model.sdf
Models/flathead_screwdriver/: flathead_screwdriver.dae  model.config  model.sdf
Models/hammer_simple/: model.config  model.sdf
Models/table/: model.config  model.sdf
NRPExp_DVSDatabaseGenerator/: bibi_configuration.bibi  experiment_configuration.exc  room.sdf  rosbag_record.launch  test.py  toto.py  user-settings.uis
Scripts/: generate_dataset.py  jprb_generate_dataset.py  requirements.txt
Scripts_rosbag/: read_bag.py  vc_generate_data.py
resources/: cdp4_data_collection.py  generate_dataset.py  jprb_generate_dataset.py  vc.py
resources/dae_files/: sphere_low.dae
src/: generate_data.py  postprocess.py  read_bag.py  scene_geom.py  utils.ipynb  video.py
(+13 files in other folders)
